# d2l_homework

./: README.md  pyproject.toml
src/d2l_homework/: __init__.py
