[project]
name = "d2l-homework"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SIKAI ZHANG", email = "34108862+MatthewSZhang@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/d2l_homework"]